--- a/mi-aplicacion/src/components/Header/Header.css
+++ b/mi-aplicacion/src/components/Header/Header.css
@@ -6,8 +6,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0rem 2rem;
-    background: var(--light-color); 
+    padding: 0.5rem 2rem;
+    background-color: transparent;
     z-index: 1000;
 }
 
