--- a/mi-aplicacion/src/pages/ResidenciesProgram/components/BottomNavigation.css
+++ b/mi-aplicacion/src/pages/ResidenciesProgram/components/BottomNavigation.css
@@ -5,7 +5,7 @@
     right: 0;
     display: flex;
     background-color: transparent;
-    z-index: 1000;
+    z-index: 800;
     padding: 0;
     margin: 0;
     height: 60px;
@@ -21,7 +21,8 @@
     padding: 15px 20px;
     cursor: pointer;
     transition: all 0.3s ease;
-    font-size: 14px;
+    font-size: 1.1rem;
+    letter-spacing: 0.05rem;
     font-weight: 500;
     border-right: 1px solid var(--dark-color);
     position: relative;
