--- a/mi-aplicacion/src/components/Titles/MediumSans/MediumSans.css
+++ b/mi-aplicacion/src/components/Titles/MediumSans/MediumSans.css
@@ -1,12 +1,13 @@
 .medium-sans-title {
     font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 2.5rem;
+    font-weight: 100;
+    font-size: 2.3rem;
     line-height: 1.2;
     margin: 0;
     padding: 0;
-    color: inherit;
-    letter-spacing: -0.02em;
+    color: var(--dark-color);
+    letter-spacing: 0em;
+    text-transform: uppercase;
 }
 
 .medium-sans-title.large {
