--- a/mi-aplicacion/src/pages/Foundation/Foundation.css
+++ b/mi-aplicacion/src/pages/Foundation/Foundation.css
@@ -1,6 +1,7 @@
 .foundation-container {
     position: relative;
     width: 100%;
+
 }
 
 .vision-section {
@@ -11,15 +12,19 @@
     height: 100vh;
     z-index: 1;
     overflow: hidden;
+    padding: 0.5rem 2rem;
+
 }
 
 .team-container {
     position: relative;
     z-index: 2;
-    margin-top: 100vh;
+    margin-top: 92vh;
     background-color: var(--light-color); 
     min-height: 100vh;
     padding: 50px 0;
+        padding: 0.5rem 2rem;
+
 }
 
 .vision-section {
