--- a/mi-aplicacion/src/pages/Foundation/sections/Vision/Vision.css
+++ b/mi-aplicacion/src/pages/Foundation/sections/Vision/Vision.css
@@ -1,10 +1,15 @@
 .section-vision {
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     flex-direction: column;
     padding: 0;
     margin: 0;
     position: relative;
-    background-color: wheat;
+    background-color: transparent;
+    justify-content: center;
+    /* margin-bottom: 1rem;
+    padding-bottom: 2rem; */
+    /* gap: 4rem; */
+    border-bottom: 2px solid var(--dark-color);
 }
