--- a/mi-aplicacion/src/pages/ResidenciesProgram/sections/Finca/Finca.css
+++ b/mi-aplicacion/src/pages/ResidenciesProgram/sections/Finca/Finca.css
@@ -1,10 +1,122 @@
 .finca-section {
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     flex-direction: column;
     padding: 0;
     margin: 0;
     position: relative;
-    background-color: wheat;
+    background-color: transparent;
+    padding: 2rem 2rem;
+    flex-direction: column;
+    overflow-y: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
+
+.finca-section::-webkit-scrollbar {
+    display: none;
+}
+
+.first-line-finca,
+.other-pictures {
+    display: flex;
+    flex-direction: row;
+    background-color: transparent;
+}
+
+.column-left-finca,
+.column-right-finca {
+    flex: 1;
+    min-width: 0;
+    overflow: hidden;
+    text-align: left;
+}
+
+.column-right-finca {
+    padding-top: 3rem;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end; 
+    justify-content: space-between; 
+    height: 100%;
+}
+.finca-section-title {
+    text-align: right;
+}
+.finca-text {
+    width: 90%;
+}
+
+
+
+
+/* Estilos para la imagen principal */
+.main-image-container {
+    width: 65%;
+    aspect-ratio: 0.9/1;
+    overflow: hidden;
+}
+
+.main-finca-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+
+
+
+
+
+/* Estilos para los thumbnails */
+.other-pictures {
+    margin-top: 3rem;
+    justify-content: space-between; 
+    flex-wrap: wrap;
+}
+
+.thumbnail-container {
+    position: relative;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border: 2px solid transparent;
+    border-radius: 0px;
+    overflow: visible;
+    margin-top: 25px; 
+}
+
+.thumbnail-container:hover .thumbnail-image {
+    filter: grayscale(0%); 
+}
+
+.thumbnail-container.active .thumbnail-image {
+    filter: grayscale(0%);
+}
+
+.thumbnail-image {
+    width: 140px;
+    aspect-ratio: 0.85/1;
+    object-fit: cover;
+    display: block;
+    filter: grayscale(100%); 
+    transition: filter 0.3s ease; 
+}
+
+.thumbnail-number {
+    position: absolute;
+    top: -25px;
+    left: 0;
+    background-color: transparent;
+    color: var(--neutral-color);
+    padding: 0;
+    font-size: 0.85rem;
+    font-weight: 300;
+}
+
+.thumbnail-container.active .thumbnail-number {
+    color: var(--dark-color);
+}
+
