--- a/mi-aplicacion/src/components/Titles/MiniBlue/MiniBlue.css
+++ b/mi-aplicacion/src/components/Titles/MiniBlue/MiniBlue.css
@@ -4,7 +4,7 @@
     font-size: 0.8rem;
     text-transform: uppercase;
     line-height: 1.2;
-    margin: 0;
+    margin-bottom: 0.5rem;
     padding: 0;
     color: var(--accent-color);
     letter-spacing: -0.02em;
