--- a/mi-aplicacion/src/pages/ResidenciesProgram/sections/Intro/IntroResidencies.css
+++ b/mi-aplicacion/src/pages/ResidenciesProgram/sections/Intro/IntroResidencies.css
@@ -1,44 +1,75 @@
+/* 1. Contenedor principal */
 .intro-residencies-section {
-    display: flex;
-    width: 100%;
-    height: 100vh;
-    flex-direction: row;
-    padding: 0;
-    margin: 0;
     position: relative;
-    background-color: transparent;
-    padding: 9rem 2rem;
-    padding-bottom: 0rem;
+    width: 100%;
 }
 
-.left-column-intro,
-.right-column-intro {
+/* 2. Contenedor único que cambia de fixed a absolute */
+.intro-viewport-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    /* padding: 9rem 2rem 0rem; */
+    overflow: hidden;
+    will-change: transform, top;
+    z-index: -1; 
+}
+
+/* Alternativa: aplicar clip-path para corte limpio en top */
+.intro-viewport-container.clipped {
+    clip-path: inset(0 0 0 0); 
+}
+
+/* 3. Columna izquierda */
+.left-column-intro {
     flex: 1;
     min-width: 0;
+    display: flex;
+    flex-direction: column;
+    position: relative;
     overflow: hidden;
 }
 
-.left-column-intro {
-    /* padding: 9rem 2rem; */
-    display: flex;
-    flex-direction: column;
-}
-.intro-titles {
-    margin-bottom: 6rem;
+/* 4. Contenido que se mueve */
+.intro-content-wrapper {
+    padding: 9rem 2rem 0rem;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    will-change: transform;
 }
 
-.intro-text {
-    width: 90%;
-}
-
+/* 5. Columna derecha */
 .right-column-intro {
+    flex: 1;
+    min-width: 0;
     display: flex;
-    justify-content: flex-end; /* Empuja la imagen hacia la derecha */
-    align-items: flex-start; /* Mantiene la imagen arriba */
+    justify-content: flex-end;
+    align-items: flex-start;
+    position: relative;
+    padding-top: 9rem; 
 }
+
+.intro-titles {
+    margin-bottom: 8rem;
+}
+
+/* .intro-text {
+    width: 90%;
+    line-height: 1.6;
+    padding-bottom: 0rem;
+} */
 
 .right-column-intro img {
-    /* max-width: 400px; */
     height: auto; 
     width: 80%;
+    max-height: calc(100vh - 9rem);
+    object-fit: contain;
+    padding-bottom: 3rem;
 }
