--- a/mi-aplicacion/src/pages/ResidenciesProgram/sections/OpenCall/OpenCallR.css
+++ b/mi-aplicacion/src/pages/ResidenciesProgram/sections/OpenCall/OpenCallR.css
@@ -1,4 +1,4 @@
-.open-call-section {
+/* .open-call-section {
     display: flex;
     width: 100%;
     height: 100vh;
@@ -7,4 +7,4 @@
     margin: 0;
     position: relative;
     background-color: var(--accent-color);
-}
+} */
