--- a/mi-aplicacion/src/pages/Foundation/Foundation.css
+++ b/mi-aplicacion/src/pages/Foundation/Foundation.css
@@ -19,11 +19,11 @@
 .team-container {
     position: relative;
     z-index: 2;
-    margin-top: 92vh;
+    margin-top: 90vh;
     background-color: var(--light-color); 
     min-height: 100vh;
-    padding: 50px 0;
-        padding: 0.5rem 2rem;
+    /* padding: 50px 0; */
+    padding: 1rem 2rem;
 
 }
 
@@ -33,5 +33,8 @@
 
 .team-container {
     background-color: white;
-    border-radius: 20px 20px 0 0; 
+    /* border-radius: 20px 20px 0 0;  */
+    /* margin-left: 2rem;
+    margin-right: 2rem; */
+    border-top: 2px solid var(--dark-color);
 }
