--- a/mi-aplicacion/src/pages/ResidenciesProgram/ResidenciesProgram.css
+++ b/mi-aplicacion/src/pages/ResidenciesProgram/ResidenciesProgram.css
@@ -2,6 +2,8 @@
     position: relative;
     width: 100%;
     min-height: 100vh;
+    /* padding: 2rem 2rem; */
+
     /* padding-bottom: 60px; */
 }
 
