--- a/mi-aplicacion/src/pages/ResidenciesProgram/sections/PastResidencies/PastResidencies.css
+++ b/mi-aplicacion/src/pages/ResidenciesProgram/sections/PastResidencies/PastResidencies.css
@@ -1,10 +1,12 @@
 .past-residencies-section {
     display: flex;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     flex-direction: column;
     padding: 0;
     margin: 0;
     position: relative;
-    background-color: floralwhite;
+    background-color: transparent;
+    padding: 6rem 2rem;
+
 }
