--- a/mi-aplicacion/src/components/Titles/MiniBlue/MiniBlue.css
+++ b/mi-aplicacion/src/components/Titles/MiniBlue/MiniBlue.css
@@ -4,8 +4,8 @@
     font-size: 0.8rem;
     text-transform: uppercase;
     line-height: 1.2;
-    margin-bottom: 0.5rem;
     padding: 0;
+    padding-bottom: 0.5rem;
     color: var(--accent-color);
     letter-spacing: -0.02em;
 }
