--- a/mi-aplicacion/src/pages/Archive/Archive.css
+++ b/mi-aplicacion/src/pages/Archive/Archive.css
@@ -1,8 +1,9 @@
 .archive-container {
     display: flex;
     flex-direction: column;
-    /* justify-content: center;
-    align-items: center; */
+    padding: 12rem 2rem;
+}
+
+.azar-archive {
     text-align: center;
-    padding: 10rem 2rem;
 }
