--- a/mi-aplicacion/src/pages/Home/sections/Hero/Hero.css
+++ b/mi-aplicacion/src/pages/Home/sections/Hero/Hero.css
@@ -8,7 +8,7 @@
     padding: 0;
     margin: 0;
     position: relative;
-    background-image: url('/Images/Home/HomeBackground.jpg');
+    /* background-image: url('/Images/Home/HomeBackground.jpg'); */
     background-size: 55%;
     background-position: center;
     background-repeat: no-repeat;
