--- a/mi-aplicacion/src/pages/ResidenciesProgram/components/BottomNavigation.css
+++ b/mi-aplicacion/src/pages/ResidenciesProgram/components/BottomNavigation.css
@@ -8,7 +8,7 @@
     z-index: 800;
     padding: 0;
     margin: 0;
-    height: 60px;
+    /* height: 60px; */
     border: 1px solid var(--dark-color);
 
 }
@@ -17,11 +17,12 @@
     flex: 1;
     border: none;
     background-color: var(--light-color);
-    color: black;
-    padding: 15px 20px;
+    color: var(--dark-color);
+    /* padding: 15px 20px; */
+    padding: 12px 20px;
     cursor: pointer;
     transition: all 0.3s ease;
-    font-size: 1.1rem;
+    font-size: 1rem;
     letter-spacing: 0.05rem;
     font-weight: 500;
     border-right: 1px solid var(--dark-color);
@@ -33,7 +34,7 @@
 }
 
 .nav-item:hover {
-    background-color: #f5f5f5;
+    background-color: var(--light-neutral-color);
 }
 
 .nav-item.active {
