--- a/mi-aplicacion/src/pages/ResidenciesProgram/sections/OpenCall/Jurado.css
+++ b/mi-aplicacion/src/pages/ResidenciesProgram/sections/OpenCall/Jurado.css
@@ -6,5 +6,8 @@
     padding: 0;
     margin: 0;
     position: relative;
-    background-color: wheat;
+    padding: 2rem 2rem;
+    background-color: transparent;
+    border-top: 1px solid var(--dark-color);
+    border-bottom: 1px solid var(--dark-color);
 }
