--- a/mi-aplicacion/src/pages/Home/sections/Intro/Intro.css
+++ b/mi-aplicacion/src/pages/Home/sections/Intro/Intro.css
@@ -11,4 +11,6 @@
     background-color: transparent;
     border-top: 1px solid var(--dark-color);
     border-bottom: 1px solid var(--dark-color);
+    justify-content: space-between; /* Añade esta línea */
+
 }
