--- a/mi-aplicacion/src/index.css
+++ b/mi-aplicacion/src/index.css
@@ -13,6 +13,8 @@
   --light-color: white;
   --neutral-color: #999999;
   --light-neutral-color: #D9D9D9;
+  --light-header-color: #f3f3f3;
+
 
   --corporative-color: #074495;
   --accent-color: #87ACDD;
