--- a/mi-aplicacion/src/components/Header/Navigation/Navigation.css
+++ b/mi-aplicacion/src/components/Header/Navigation/Navigation.css
@@ -24,14 +24,15 @@
     justify-content: flex-end;
     text-decoration: none;
     color: var(--dark-color);
-    font-weight: 300;
+    font-weight: 100;
     border-right: 1px solid var(--light-neutral-color);
-    font-size: 2rem;
+    font-size: 1.8rem;
     text-transform: uppercase;
     background-color: var(--light-header-color);
     position: relative;
     overflow: hidden;
     letter-spacing: 0.1rem;
+    font-family: var(--main-font);
     animation: slideDownNavLink 0.6s cubic-bezier(0.11, 0, 0.5, 0) both;
 }
 
