--- a/mi-aplicacion/src/pages/Publication/components/CartItemsList.css
+++ b/mi-aplicacion/src/pages/Publication/components/CartItemsList.css
@@ -3,7 +3,7 @@
 .cart-items-list {
     flex: 1;
     overflow-y: auto;
-    padding: 1rem 0;
+    padding: 0rem 0;
     display: flex;
     flex-direction: column;
     gap: 0;
@@ -15,7 +15,7 @@
     align-items: center;
     justify-content: center;
     padding: 2rem;
-    color: #666;
+    color: var(--dark-color);
     font-style: italic;
 }
 
